--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,6 @@
     },
   ],
   "java.test.defaultConfig": "WPIlibUnitTests",
-  "wpilib.deployOffline": true
+  "wpilib.deployOffline": true,
+  "java.format.settings.url": "eclipse-formatter.xml"
 }
